oms/oms-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-client-service
  namespace: oms
spec:
  selector:
    app: oms-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
