oms/oms-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-server-service
spec:
  selector:
    app: oms-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
