oms/oms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oms-ingress
spec:
  ingressClassName: "nginx-3"
  rules:
  - host: a52a2ff8ede3b42488f03b4eee0353e0-1263031355.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:  
            name: oms-server-service
            port:  
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oms-client-service
            port:
              number: 80
